# oca-sale

./: README.md
odoo-bringout-oca-sale-reporting-sale_comment_template/doc/: DEPENDENCIES.md
odoo-bringout-oca-sale-reporting-sale_report_delivered/doc/: DEPENDENCIES.md
odoo-bringout-oca-sale-workflow-partner_contact_sale_info_propagation/doc/: DEPENDENCIES.md
odoo-bringout-oca-sale-workflow-portal_sale_order_search/doc/: DEPENDENCIES.md
odoo-bringout-oca-sale-workflow-portal_sale_personal_data_only/doc/: DEPENDENCIES.md
odoo-bringout-subscription_oca/: README.md  pyproject.toml
odoo-bringout-subscription_oca/subscription_oca/: README.rst  __manifest__.py
odoo-bringout-subscription_oca/subscription_oca/data/: ir_cron.xml
odoo-bringout-subscription_oca/subscription_oca/i18n/: bs.po  subscription_oca.pot
odoo-bringout-subscription_oca/subscription_oca/models/: res_partner.py  sale_order.py  sale_subscription.py  sale_subscription_line.py  sale_subscription_template.py
odoo-bringout-subscription_oca/subscription_oca/readme/: CONTRIBUTORS.md
odoo-bringout-subscription_oca/subscription_oca/security/: ir.model.access.csv
odoo-bringout-subscription_oca/subscription_oca/static/description/: index.html
odoo-bringout-subscription_oca/subscription_oca/tests/: test_subscription_oca.py
odoo-bringout-subscription_oca/subscription_oca/views/: sale_subscription_views.xml
odoo-bringout-subscription_oca/subscription_oca/wizard/: __init__.py  generate_subscriptions_wizard.py  generate_subscriptions_wizard.xml
(+178 files in other folders)
